Address comments
Signed-off-by: Heng Qian <qianheng@amazon.com>