@@ -464,7 +464,8 @@ public interface PlanUtils {
 
   /** Check if contains dedup, it should be put in the last position */
   static boolean containsRowNumberDedup(RelNode node) {
-    return node.getRowType().getFieldNames().getLast().equals(ROW_NUMBER_COLUMN_FOR_DEDUP);
+    List<String> fieldNames = node.getRowType().getFieldNames();
+    return fieldNames.get(fieldNames.size() - 1).equals(ROW_NUMBER_COLUMN_FOR_DEDUP);
   }
 
   /** Check if contains dedup for top/rare */
